<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_world">Hello world</string>
    <string name="love">I love Android</string>
    <string name="button_text">I\'m a button </string>
    <string name="on">Switch on/off </string>
    <string name="press">Press me</string>
    <string name="check">Check this out!</string>
    <string name="toast_message">Label has been updated</string>
    <string name="welcome_message">Welcome %1$s!</string>
    <string name="next_button_label">NEXT</string>
    <string name="dont_call_me_label">DON\'T CALL ME THAT</string>
    <string name="thank_you_label">THANK YOU</string>
    <string name="add_label">Add</string>
    <string name="type_here_label">Type here</string>
    <string name="Urgent_label">Urgent</string>
    <string name="cat_image_description">Description of your cat image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>