<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/love"
                android:textSize="30dp"/>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:textSize="20dp"/>
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flag_en"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press"
            android:layout_marginTop="20dp"
            android:layout_marginRight="85dp"
            android:onClick="onClickBtn"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/etLove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="I love Android"
        android:layout_marginTop="20dp"
        android:textSize="20dp"/>

</LinearLayout>